# tnav

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Plan.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: ci.sh
src/: app.rs  cli.rs  errors.rs  lib.rs  main.rs  output.rs
src/auth/: browser.rs  callback_server.rs  mod.rs  oauth.rs  pkce.rs  provider.rs  tokens.rs
src/commands/: ask.rs  auth.rs  doctor.rs  executor.rs  history.rs  init.rs  mod.rs  status.rs
src/config/: llm.rs  load.rs  mod.rs  model.rs  paths.rs  save.rs
src/history/: mod.rs  model.rs  store.rs
src/llm/: anthropic.rs  config.rs  error.rs  google.rs  lmstudio.rs  mock.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src/secrets/: keyring_store.rs  mod.rs
src/ui/: mod.rs  prompts.rs  readline.rs  wizard.rs
src/util/: mod.rs  redact.rs
tests/: cli_smoke.rs  config_roundtrip.rs  llm_integration.rs  oauth_callback.rs  redact_secret.rs
