[package]
name = "tnav"
version = "0.3.1"
edition = "2024"
description = "Interactive Rust CLI scaffold for tnav"
repository = "https://github.com/noizbuster/tnav"
license = "MIT"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["events"] }
directories = "5.0"
inquire = "0.9"
keyring = "3.6"
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3.18"
unicode-width = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
webbrowser = "1.0"

[dev-dependencies]

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Which actions to run on pull requests
pr-run-mode = "skip"
allow-dirty = ["ci"]
# Checksums to generate for each App
checksum = "sha256"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-gnu = "ubuntu-22.04"
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
x86_64-apple-darwin = "macos-15-intel"
aarch64-apple-darwin = "macos-15"
